example from http://archive.develooper.com/macperl-porters@perl.org/
and nntp.perl.org.  For bug numbers, see the bug reports at
http://dev.macperl.org/.

This file contains only changes that affect the maint-5.6/macperl branch.

----------------
Version v5.6.1b3
----------------

____________________________________________________________________________
[ 14079] By: pudge                                 on 2002/01/04  21:09:40
        Log: Add more droplets
     Branch: maint-5.6/macperl
	   + macos/macperl/Droplets/gluedialect.plx
	   + macos/macperl/Droplets/glueedit.plx
	   + macos/macperl/Droplets/gluemac.plx
	   + macos/macperl/Droplets/gluescriptadds.plx
	   + macos/macperl/Droplets/installme.plx
	   + macos/macperl/Droplets/show_glue_pods.plx
	   + macos/macperl/Droplets/tarzipme.plx
	   + macos/macperl/Droplets/untarzipme.plx
____________________________________________________________________________
[ 14076] By: pudge                                 on 2002/01/04  20:44:23
        Log: First go at fixing Mac::Memory::_open (MacPerl Bug #494481)
     Branch: maint-5.6/macperl
	   + macos/HandleSocket.cp
	   ! macos/ext/Mac/Memory/Memory.xs macos/ext/Mac/Memory/t/Memory.t
	   ! macos/macperl.sym
____________________________________________________________________________
[ 14075] By: pudge                                 on 2002/01/04  20:42:06
        Log: Doc updates
     Branch: maint-5.6/macperl
	   ! macos/ext/MacPerl/MacPerl.pm macos/ext/MacPerl/OSA.xs
____________________________________________________________________________
[ 14074] By: pudge                                 on 2002/01/04  20:41:26
        Log: Update libraries
     Branch: maint-5.6/macperl
	   ! macos/macperl/Makefile.mk
____________________________________________________________________________
[ 14073] By: pudge                                 on 2002/01/04  20:40:11
        Log: Update tests to Mac::StandardFile from StandardFile.pl,
             plus other fixes